# icpc-cmake

./: .clang-format  .gitignore  .gitmodules  BUILD.bazel  CMakeLists.txt  Cargo.toml  LICENSE  README.md  WORKSPACE  consts.h.in  install.sh  main  main.cc  main.cpp  run_main.sh  testlib.h
.cache/clangd/index/: main.cc.C90031EDCAA492EE.idx
.config/cph-proxy/: config.toml
archive/: CMakeLists.txt  tmp.cc
archive/atcoder/: CMakeLists.txt
archive/codeforces/: CMakeLists.txt
archive/codeforces/2010/C1/: CMakeLists.txt  info.toml  main.h  test.cc
archive/codeforces/2010/C2/: CMakeLists.txt  info.toml  main.h  test.cc
atcoder/: convolution.hpp
bin_output/: a.out
bits/: BUILD.bazel
bundle/: CMakeLists.txt  Cargo.toml  bundler.cc  bundler.sh
bundle/src/: consts.rs  consts.rs.in  handler.rs  main.rs
compare/: BUILD.bazel  gen.cc  gen.h  my.cpp  runner.cc  runner.sh  std.cpp
compare/src/: BUILD.bazel  my.cc  runner.cc  std.cc
inner/: all  number  prelude
inner/ds/: seg_tree_op.hpp  seg_tree_poly_node.hpp
inner/frac_geo/: basic.hpp  frac.hpp  frac2.hpp  half_panel.hpp
inner/geometry/: basic.hpp  circle.hpp  convex.hpp  external.hpp  half_panel.hpp
inner/num/: all  big_int.hpp  bit.hpp  fft.hpp  floor_sum.hpp  gcd.hpp  inv_gcd.hpp  number.hpp  primitive_root.hpp  static_mod_int.hpp  type_traits.hpp
inner/tools/: color.hpp  ncmp.hpp  test_suite.hpp  wcmp.hpp
libs/: BUILD.bazel
libs/codeforces/: BUILD.bazel  testlib.h
minify/: CMakeLists.txt  minify.cc
src/: a.cc
tests/: CMakeLists.txt  geo.cc  poly.cc  seg_tree.cc
tools/: CMakeLists.txt
tools/bundle/: Cargo.toml
tools/bundle/src/: handler.rs  main.rs
tools/compare/: Cargo.toml
tools/compare/src/: checker.rs  lib.rs
tools/compare/src/thread_manager/: bind_core.rs  mod.rs
tools/cph-proxy/: Cargo.toml
tools/cph-proxy/src/: cfg.rs  init.rs  lib.rs  main.rs  model.rs
tools/cph-proxy/src/handler/: clipboard_proxy.rs  cmake_gen.rs  context.rs  mod.rs
tools/cph-proxy/src/handler/atc/: cmake_gen.rs  mod.rs
tools/cph-proxy/src/handler/cf/: cmake_gen.rs  mod.rs
tools/cph-proxy/src/handler/default/: common_utils.rs  mod.rs
tools/cph-proxy/src/service/: context.rs  mod.rs
tools/cph-proxy/src/service/atc/: cmake_gen.rs  mod.rs
tools/cph-proxy/src/service/cf/: cmake_gen.rs  mod.rs
tools/cph-proxy/src/service/cmake_gen/: mod.rs
tools/cph-proxy/src/service/config/: clipboard.rs  mod.rs
tools/cph-proxy/src/service/default/: common_utils.rs  mod.rs  vscode_middleware.rs
tools/icpc-project-gen/: Cargo.toml
tools/icpc-project-gen/src/: consts.rs  consts.rs.in
tools/idl/: base.proto  clipboard.proto  info.proto
tools/idl-gen/: Cargo.toml  build.rs  volo.yml
tools/idl-gen/src/: lib.rs
