package(default_visibility = ["//visibility:public"])

cc_library(
    name = "cf",
    srcs = glob(["testlib.h"]),
)

cc_library(
    name = "atcoder",
    hdrs = glob(["atcoder/*"]),
)

cc_binary(
    name = "main",
    srcs = ["main.cc"],
    copts = ["-std=c++17"],
    deps = [
        "//bits:bits",
        ":cf",
        ":atcoder",
    ],
)
