[workspace]
members = ["tools/bundle", "tools/cph-proxy", "tools/icpc-project-gen"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["rustls-tls", "http2"] }
once_cell = { version = "1.19" }
dirs = { version = "5.0" }
anyhow = { version = "1.0" }
regex = "1.10.5"
log = "0.4"