[workspace]
members = [
    "tools/bundle", "tools/compare",
    "tools/cph-proxy",
    "tools/icpc-project-gen",
    "tools/idl-gen",
    # "tools/idl-gen-plugins",
]
resolver = "2"
package.edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["rustls-tls", "http2"] }
once_cell = { version = "1.19" }
dirs = { version = "5.0" }
anyhow = { version = "1.0" }
regex = "1.10.5"
log = "0.4"
async-trait = { version = "0.1" }
pilota = "0.11"
ahash = "0.8"
volo = { version = "0.10" }
volo-grpc = { version = "0.10", features = ["grpc-web"] }
futures = { version = "0.3" }
pilota-build = { version = "0.11" }
volo-build = { version = "0.10" }
