# need to build with O0 and gcc
cc_binary(
    name = "my",
    srcs = ["my.cc"],
    copts = [
        "-O0",
        "-std=c++17",
    ],
)

# need to build with O0 and gcc
cc_binary(
    name = "std",
    srcs = ["std.cc"],
    copts = [
        "-O0",
        "-std=c++17",
    ],
)

cc_binary(
    name = "runner",
    srcs = ["runner.cc"],
)
