[package]
name = "compare"
version = "0.1.0"
edition.workspace = true

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
cph-proxy = { path = "../cph-proxy" }
anyhow.workspace = true
ratatui = "0.28.1"
color-eyre = "0.6.3"
singleflight = "0.3.0"
crossbeam = "0.8.4"
crossbeam-skiplist = "0.1.3"
bit-set = "0.8.0"
tokio.workspace = true
libc = "0.2.159"
log.workspace = true

[dev-dependencies]
num_cpus = "1.16.0"

[features]
default = []
