[package]
name = "cph-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
reqwest.workspace = true
once_cell.workspace = true
dirs.workspace = true
toml.workspace = true
anyhow.workspace = true
regex.workspace = true
log.workspace = true
async-trait.workspace = true
volo.workspace = true
volo-grpc.workspace = true
pilota.workspace = true
axum = { version = "0.7.5", features = ["default", "macros"] }
hyper = { version = "1.4.1", features = ["full"] }
fs2 = { version = "0.4.3" }
hotwatch = { version = "0.5.0" }
lazy_static = { version = "1.5" }

idl-gen = { path = "../idl-gen" }
# idl-gen-plugins = { path = "../idl-gen-plugins" }
icpc-project-gen = { path = "../icpc-project-gen" }
