[package]
name = "cph-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
reqwest.workspace = true
once_cell.workspace = true
dirs.workspace = true
toml.workspace = true
anyhow.workspace = true
regex.workspace = true
log.workspace = true
async-trait.workspace = true
volo.workspace = true
volo-grpc.workspace = true
pilota.workspace = true
axum = { version = "0.7.5", features = ["default", "macros"] }
hyper = { version = "1.4.1", features = ["full"] }
fs2 = { version = "0.4.3" }
hotwatch = { version = "0.5.0" }
lazy_static = { version = "1.5" }
crc32fast = { version = "1.4.2", optional = true }
# copypasta = { version = "0.10", optional = true }
cli-clipboard = { version = "0.4", optional = true }
normalize-path = { version = "0.2.1", optional = true }

idl-gen = { path = "../idl-gen" }
# idl-gen-plugins = { path = "../idl-gen-plugins" }
icpc-project-gen = { path = "../icpc-project-gen" }
clap = { version = "4.5.18", features = ["derive"] }
tower-http = { version = "0.6.1", features = ["fs"] }

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
temp-dir = { version = "0.1.13" }

[features]
default = ["clipboard_proxy"]
clipboard_proxy = ["crc32fast", "cli-clipboard", "normalize-path"]
